prevents content from overflowing

--- a/css/solve.css
+++ b/css/solve.css
@@ -19,6 +19,7 @@
     padding: 10px;
     height: 650px;
     width:607px;
+    overflow:hidden;
   }
   
   .code-output {
